--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.1.0",
+    "@mantine/dates": "^8.2.1",
     "@mantine/form": "^8.1.0",
     "@mantine/hooks": "^8.1.0",
     "@mantine/modals": "^8.1.0",
@@ -22,6 +23,7 @@
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.9.0",
     "bz-mern-fullstack-app": "file:..",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
